# GFXEngine

./: CMakeLists.txt  readme.md
GFXEditor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorDialog.cpp  EditorDialog.h  EditorPlugin.h  FileNameWidget.cpp  FileNameWidget.h  ProjectExplorer.cpp  ProjectExplorer.h  TextInputDialog.cpp  TextInputDialog.h  WordEditor.cpp  WordEditor.h  WorldEditor.cpp  WorldEditor.h  main.cpp
GFXEngine/: AABB.h  Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  BackgroundTask.cpp  BackgroundTask.h  Behavior.h  BehaviorRegistry.cpp  BehaviorRegistry.h  CMakeLists.txt  Camera.h  Camera3D.cpp  Camera3D.h  DataResource.cpp  DataResource.h  DataTypes.h  DebugBhv.cpp  DebugBhv.h  DebugPass.cpp  DebugPass.h  DebugPipeline.cpp  DebugPipeline.h  DefaultPipeline.cpp  DefaultPipeline.h  DefaultRenderBehavior.cpp  DefaultRenderBehavior.h  DefaultRenderPipeline.h  DirectionalLight.cpp  DirectionalLight.h  EngineDefinitions.h  Entity.cpp  Entity.h  EntityFactory.h  EnviromentMap.cpp  EnviromentMap.h  EnviromentMaterial.cpp  EnviromentMaterial.h  EnviromentPipeline.cpp  EnviromentPipeline.h  (+120 more)
GFXEngine/Shader/: compile.bat  pbr_frag.spv  pbr_shader.frag  pbr_shader.vert  pbr_vert.spv
ThirdPartyLicenses/: assimp.txt
assets/shaders/: compile.bat  debug.frag  debug.vert  debug_frag.spv  debug_vert.spv  env.frag  env.vert  env_frag.spv  env_vert.spv  frag.spv  mesh.frag  mesh.vert  mesh_instanced.frag  mesh_instanced.vert  mesh_instanced_frag.spv  mesh_instanced_pbr.frag  mesh_instanced_pbr.vert  mesh_instanced_pbr_frag.spv  mesh_instanced_pbr_vert.spv  mesh_instanced_vert.spv  mesh_pbr.frag  mesh_pbr.vert  mesh_pbr_frag.spv  mesh_pbr_vert.spv  mesh_vert.spv  shader.frag  shader.vert  sprite.frag  sprite.vert  sprite_frag.spv  sprite_vert.spv  vert.spv
